build: Add basic CI test pipelines (#18)
This adds some basic CI test pipelines for the project. Basically run tests in the Rust and Java/Scala side within the repo.

Closes #7